flux/apps/woodpecker/server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: woodpecker-server
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: woodpecker.dnhrrs.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: woodpecker-server
                port:
                  name: http
  tls:
    - secretName: woodpecker-cert
      hosts:
        - woodpecker.dnhrrs.xyz
